--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="wwr/siteplan-rafting.html">Rafting plan site</a>
     </header>
     <main>
-        <h1>Samuel Reyes Condori | WDD 130</h1>
+        <h1>Samuel Aldahir Reyes Condori | WDD 130</h1>
         <img src="images/IMG-20230609-WA0018.jpg" alt="Hello my name is Samuel Reyes" width="200">
         <p>Hello my name is Samuel Reyes and I am from Lima Peru. I enjoy spending time with my family and going to the cinema </p>
     </main>
