--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,33 +10,43 @@
 </head>
 <body>
     <header>
-        <h1>Rafting Site PLan</h1>
+        <h1>Rafting Site Plan</h1>
         <div>Samuel Reyes</div>
     </header>
     <main>
         <h2>Overview</h2>
         <h3>Purpose</h3>
-        <p></p>
+        <p>Build Revenue</p>
         <h3>Audience</h3>
-        <p></p>
+        <p>This dryoar sport is aimed at young people under 115 years of age and over 15</p>
         <h2>Branding</h2>
         <h3>Website Logo</h3>
-        <img src="" alt="">
+        <img src="images/river.gif" alt="Rafting Site Logo">
         <h2>Style Guide</h2>
         <h3>Color Palette</h3>
-        <p></p>
+        <p>Palette URL:</p>
+        <a href="https://coolors.co/palette/ccc7b9-eaf9d9-e2d4ba-af7a6d-653239"
+         target="_blank">https://coolors.co/palette/ccc7b9-eaf9d9-e2d4ba-af7a6d-653239</a>
         <h3>Typography</h3>
-        <h4>Headings Example Font</h4>
-        <h4>Normal Text/Paragraph Example Font</h4>
-        <p></p>
+        <h4>Heading Font: Merriweather:Alfa Slab One</h4>
+        <h4>Paragraph Font: Inter</h4>
+        <p>  The best Whitewater Rafting in Colorado, White Water Rafting Company
+            offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
+            Springs. Since 1974, we have been family owned and operated, rafting the
+            Shoshone section of Glenwood Canyon and beyond.
+        </p>
         <h4>Colored Callout Example Font</h4>
-        <p></p>
+        <p>   Trips vary from mild and great for families, to trips exclusively for
+            physically fit and experienced rafters. No matter what type of river
+            adventures you are seeking, White Water Rafting Company can make it
+            happen for you.
+        </p>
         <h3>Navigation</h3>
         <nav>
             <a href="#">Home</a>
             <a href="#">About Us</a>
             <a href="#">Trips</a>
-            <a href="#">Contac Us</a>
+            <a href="#">Contact Us</a>
         </nav>
         <h2>Wireframes</h2>
         <h3>Home Page Wireframe</h3>
@@ -46,7 +56,7 @@
 
     </main>
     <footer>
-        <p>2024  Rafting Site Document  Samuel Reyes  WDD130</p>
+        <p> &copy 2024 &#128039  Rafting Site Document &#128039 Samuel Reyes &#128039 WDD130</p>
     </footer>
 </body>
 </html>
