Poniendo algunos cambios en la pagina del rafting

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -24,7 +24,8 @@
         <img src="images/river.gif" alt="Rafting Site Logo">
         <h2>Style Guide</h2>
         <h3>Color Palette</h3>
-        <p></p>
+        <p>Palette URL</p>
+        <a href="https://coolors.co/palette/780000-c1121f-fdf0d5-003049-669bbc" target="_blank">https://coolors.co/palette/780000-c1121f-fdf0d5-003049-669bbc</a>
         <h3>Typography</h3>
         <h4>Heading Font: Merriweather:Alfa Slab One</h4>
         <h4>Paragraph Font: Inter</h4>
