Nuevos cambios a la pagina web principal

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="adventures" content="Samuel Reyes, WDD130, sharing an incredible experience">
+    <meta name="adventures" content="Sharing an incredible experience">
     <meta name="Samuel Reyes " content="Samuel Reyes">
     <title>Samuel Reyes | WDDV130</title>
     <link rel="stylesheet" href="styles/styles.css">
@@ -20,8 +20,8 @@
         <p>Hello my name is Samuel Reyes and I am from Lima Peru. I enjoy spending time with my family and going to the cinema </p>
     </main>
     <aside>
-        <h2>Peru</h2>
-        <img src="images/macchu picchu.jpg" alt="Macchu Picchu">
+        <h2>Lima</h2>
+        <img src="images/lima.jpg" alt="Lima">
         <p>Peru (Quechua and Aymara: Piruw), officially the Republic of Peru, is a sovereign country located in western South America. It is bordered to the north, by Ecuador and Colombia; to the east, with Brazil and Bolivia; to the south, with Chile; and to the west, with the Pacific Ocean, which borders its coast.</p>
     </aside>
     <footer>
