Haciendo Ultimos detalles

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>Peru (Quechua and Aymara: Piruw), officially the Republic of Peru, is a sovereign country located in western South America. It is bordered to the north, by Ecuador and Colombia; to the east, with Brazil and Bolivia; to the south, with Chile; and to the west, with the Pacific Ocean, which borders its coast.</p>
     </aside>
     <footer>
-        <p>&copy; 2024 Samuel Reyes  &#128039; Chiclayo ,Peru  &#128039;</p>
+        <p>©️2024 🏜️ Samuel Reyes 🏜️ Chiclayo ,Peru </p>
     </footer>
 </body>
 </html>
