--- a/index.html
+++ b/index.html
@@ -5,27 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="adventures" content="Sharing an incredible experience">
     <meta name="Samuel Reyes " content="Samuel Reyes">
-    <title>Samuel Reyes | WDDV130</title>
+    <title>Samuel Reyes | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
+        <nav>
         <a href="#">Home</a>
-        <a href="wwr/">Rafting Website</a>
-        <a href="wwr/siteplan-rafting.html">Rafting plan site</a>
+        <a href="wwr/" target="_blank">Rafting Website</a>
+        <a href="wwr/siteplan-rafting.html" target="_blank">Siteplan</a>
+        <a href="https://www.linkedin.com/in/samuel-reyes-condori-43195821a/" target="_blank">Profile</a>
+        <a href="https://www.facebook.com/SamuelReyes20/" target="_blank">Facebook</a>        
+    </nav>
     </header>
     <main>
         <h1>Samuel Reyes Condori | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello my name is Samuel Reyes" width="200">
-        <p>Hello my name is Samuel Reyes and I am from Lima Peru. I enjoy spending time with my family and going to the cinema </p>
+        <p>My name is Samuel Reyes Condori, I am 23 years old. I was born in Lima, Peru, but I currently live in Chiclayo, in the north of Peru. I really like dancing salsa and playing the piano. I am very close to finishing my first Web and Computer Programming certificate. I really like programming. Since I started studying this degree I have learned several languages, including C#, Python and C++. I married a beautiful woman 6 months ago. I currently work as a family history analyst and I like what I do.</p>
+        <ul class="box indent">
+            <li><a href="https://churchofjesuschristtemples.org/salt-lake-temple/" target="_blank">Salt Lake Temple</a></li>
+            <li><a href="https://churchofjesuschristtemples.org/lima-peru-los-olivos-temple/" target="_blank">Lima Peru Los Olivos Temple</a></li>
+            <li><a href="https://churchofjesuschristtemples.org/trujillo-peru-temple/" target="_blank">Trujillo Peru Temple</a></li>
+        </ul>
     </main>
-    <aside>
-        <h2>Lima</h2>
+    <aside class="box">
+        <h2>Peru</h2>
         <img src="images/lima.jpg" alt="Lima">
         <p>Peru (Quechua and Aymara: Piruw), officially the Republic of Peru, is a sovereign country located in western South America. It is bordered to the north, by Ecuador and Colombia; to the east, with Brazil and Bolivia; to the south, with Chile; and to the west, with the Pacific Ocean, which borders its coast.</p>
     </aside>
     <footer>
-        <p>©️2024 🏜️ Samuel Reyes 🏜️ Chiclayo ,Peru </p>
+        <p>©️2024 🏜️ Samuel Reyes Condori 🏜️ Chiclayo ,Peru </p>
     </footer>
 </body>
+<!--May,Wednesday 08th -->
 </html>
