--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta Description="Adventures" content="Sharing an incredible experience">
-    <meta Author="Samuel Reyes " content="Samuel Reyes">
+    <meta name="Adventures" content="Sharing an incredible experience">
+    <meta name="Samuel Reyes " content="Samuel Reyes">
     <title>Samuel Reyes | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
