--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Adventures" content="Sharing an incredible experience">
-    <meta name="Samuel Reyes " content="Samuel Reyes">
+    <meta name="author" content="Samuel Reyes ">
+    <meta name="description" content="This web page contains my personal information and also contains a short text about the country where I was born.">
     <title>Samuel Reyes | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
