haciendo algunos cambios

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -30,15 +30,21 @@
             </article>
             <section>
                 <h2>History</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, quod?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, quod?Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, inventore laudantium velit aut saepe deleniti sit itaque consectetur consequuntur quisquam dolor fugit placeat, sapiente vero architecto. Eveniet quos deleniti adipisci!Loremlor Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil officiis recusandae repudiandae dolorum odit sit sequi hic dignissimos autem molestiae nulla doloremque possimus doloribus nostrum quia, porro dicta quo iste.</p>
             </section>
             <section>
                 <h2>Adventure Awaits You!</h2>
+                <p></p>
                 <img src="images/img1.jpg" alt="...">
+                <p></p>
                 <img src="images/img2.jpg" alt="...">
+                <p></p>
                 <img src="images/img3.jpg" alt="...">
+                <p></p>
                 <img src="images/img4.jpg" alt="...">
+                <p></p>
                 <img src="images/img5.jpg" alt="...">
+                <p></p>
             </section>
         </div> 
     </main>
