--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,19 +7,22 @@
     <meta name="description" 
     content="Este sitio web te proporcionara informacion de contacto, historial 
     y otras promociones">
+
     <meta name="author" content="Samuel Reyes">
-    <link rel="stylesheet" href="/wwr/styles/rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
         <img src="images/logo.png" alt="Logo">
         <nav>
             <a href="../index.html">Home Page</a>
-            <a href="../wwr/about.html">About Us</a>
-            <a href="">Trips</a>
-            <a href="">Contact</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
+
+
     <main> 
         <div class="hero">
             <img src="images/top.jpg" alt="image of rafting">
@@ -28,26 +31,22 @@
                 <img src="images/rafting.jpg" alt="">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur consectetur ea pariatur magni nulla doloribus earum quis nostrum omnis dolorem rerum minima cupiditate quisquam maiores nesciunt, accusantium eligendi vitae officiis.</p>
             </article>
-            <section>
+        </div>
+        <section>
                 <h2>History</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, quod?Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, inventore laudantium velit aut saepe deleniti sit itaque consectetur consequuntur quisquam dolor fugit placeat, sapiente vero architecto. Eveniet quos deleniti adipisci!Loremlor Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil officiis recusandae repudiandae dolorum odit sit sequi hic dignissimos autem molestiae nulla doloremque possimus doloribus nostrum quia, porro dicta quo iste.</p>
             </section>
             <section>
                 <h2>Adventure Awaits You!</h2>
-                <p></p>
                 <img src="images/img1.jpg" alt="...">
-                <p></p>
                 <img src="images/img2.jpg" alt="...">
-                <p></p>
                 <img src="images/img3.jpg" alt="...">
-                <p></p>
                 <img src="images/img4.jpg" alt="...">
-                <p></p>
                 <img src="images/img5.jpg" alt="...">
-                <p></p>
             </section>
-        </div> 
     </main>
+
+
     <footer> 
         <p>
             ©️2024 SamSan Rafting | Samuel Reyes Condori 
