--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,7 +15,7 @@
     <header>
         <img src="images/logo.png" alt="Logo">
         <nav>
-            <a href="../index.html">Home Page</a>
+            <a href="index.html">Home Page</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact</a>
