Terminando mi proyecto

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -55,7 +55,7 @@
 
     </main>
     <footer>
-        <p> &copy 2024 &#128039  Rafting Site Document &#128039 Samuel Reyes &#128039 WDD130</p>
+        <p> ©️2024 | Rafting Site Document 🏜️ Samuel Reyes 🏜️ WDD130</p>
     </footer>
 </body>
 </html>
