--- a/index.html
+++ b/index.html
@@ -21,21 +21,26 @@
         <a href="https://www.facebook.com/SamuelReyes20/" target="_blank">Facebook</a>        
     </nav>
     </header>
-    <main>
-        <h1>Samuel Reyes Condori | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello my name is Samuel Reyes" width="200">
-        <p>My name is Samuel Reyes Condori, I am 23 years old. I was born in Lima, Peru, but I currently live in Chiclayo, in the north of Peru. I really like dancing salsa and playing the piano. I am very close to finishing my first Web and Computer Programming certificate. I really like programming. Since I started studying this degree I have learned several languages, including C#, Python and C++. I married a beautiful woman 6 months ago. I currently work as a family history analyst and I like what I do.</p>
-        <ul class="box indent">
-            <li><a href="https://churchofjesuschristtemples.org/salt-lake-temple/" target="_blank">Salt Lake Temple</a></li>
-            <li><a href="https://churchofjesuschristtemples.org/lima-peru-los-olivos-temple/" target="_blank">Lima Peru Los Olivos Temple</a></li>
-            <li><a href="https://churchofjesuschristtemples.org/trujillo-peru-temple/" target="_blank">Trujillo Peru Temple</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Peru</h2>
-        <img src="images/lima.jpg" alt="Lima">
-        <p>Peru (Quechua and Aymara: Piruw), officially the Republic of Peru, is a sovereign country located in western South America. It is bordered to the north, by Ecuador and Colombia; to the east, with Brazil and Bolivia; to the south, with Chile; and to the west, with the Pacific Ocean, which borders its coast.</p>
+    <div class="grid">
+        <main>
+            <h1>Samuel Reyes Condori | WDD 130</h1>
+            <img src="images/profile.jpg" alt="Hello my name is Samuel Reyes" width="200">
+            <p>My name is Samuel Reyes Condori, I am 23 years old. I was born in Lima, Peru, but I currently live in Chiclayo, in the north of Peru. I really like dancing salsa and playing the piano. I am very close to finishing my first Web and Computer Programming certificate. I really like programming. Since I started studying this degree I have learned several languages, including C#, Python and C++. I married a beautiful woman 6 months ago. I currently work as a family history analyst and I like what I do.</p>
+            <ul class="box indent">
+                <li><a href="https://churchofjesuschristtemples.org/salt-lake-temple/" target="_blank">Salt Lake Temple</a></li>
+                <li><a href="https://churchofjesuschristtemples.org/lima-peru-los-olivos-temple/" target="_blank">Lima Peru Los Olivos Temple</a></li>
+                <li><a href="https://churchofjesuschristtemples.org/trujillo-peru-temple/" target="_blank">Trujillo Peru Temple</a></li>
+            </ul>
+        </main>
+           
+        <aside class="box">
+            <h2>Peru</h2>
+            <img src="images/lima.jpg" alt="Lima">
+            <p>Peru (Quechua and Aymara: Piruw), officially the Republic of Peru, is a sovereign country located in western South America. It is bordered to the north, by Ecuador and Colombia; to the east, with Brazil and Bolivia; to the south, with Chile; and to the west, with the Pacific Ocean, which borders its coast.</p>
     </aside>
+        
+    </div>
+
     <footer>
         <p>©️2024 🏜️ Samuel Reyes Condori 🏜️ Chiclayo ,Peru </p>
     </footer>
