Cambios para mi tarea de la semana 4

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,26 +13,30 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Logo">
+        <img 
+        src="images/logo.png" alt="Logo">
         <nav>
-            <a href="index.html">Home Page</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
+            <ul class="navigation">
+                <li><a href="index.html">Home Page</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
 
 
     <main> 
         <div class="hero">
-            <img src="images/top.jpg" alt="image of rafting">
             <h1>SamSan Rafting</h1>
+
+            <img src="images/top.jpg" alt="image of rafting">
             <article>
                 <img src="images/rafting.jpg" alt="">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur consectetur ea pariatur magni nulla doloribus earum quis nostrum omnis dolorem rerum minima cupiditate quisquam maiores nesciunt, accusantium eligendi vitae officiis.</p>
             </article>
         </div>
-        <section>
+            <section>
                 <h2>History</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, quod?Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, inventore laudantium velit aut saepe deleniti sit itaque consectetur consequuntur quisquam dolor fugit placeat, sapiente vero architecto. Eveniet quos deleniti adipisci!Loremlor Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil officiis recusandae repudiandae dolorum odit sit sequi hic dignissimos autem molestiae nulla doloremque possimus doloribus nostrum quia, porro dicta quo iste.</p>
             </section>
