--- a/wwr/About.html
+++ b/wwr/About.html
@@ -9,7 +9,7 @@
     y otras promociones">
 
     <meta name="author" content="Samuel Reyes">
-    <link rel="stylesheet" href="styles/About.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
