--- a/wwr/About.html
+++ b/wwr/About.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <meta name="description" 
-    content="Este sitio web te proporcionara informacion de contacto, historial 
-    y otras promociones">
-
+    content="Este sitio web te proporcionara informacion de contacto, historial y otras promociones">
     <meta name="author" content="Samuel Reyes">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
