--- a/wwr/about.html
+++ b/wwr/about.html
@@ -40,11 +40,26 @@
             </section>
             <section>
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/img1.jpg" alt="...">
-                <img src="images/img2.jpg" alt="...">
-                <img src="images/img3.jpg" alt="...">
-                <img src="images/img4.jpg" alt="...">
-                <img src="images/img5.jpg" alt="...">
+                <figure>
+                    <img src="images/img1.jpg" alt="A thrilling adventure">
+                    <figcaption>A thrilling adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/img2.jpg" alt="Exploring the rapids">
+                    <figcaption>Exploring the rapids</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/img3.jpg" alt="Scenic river view">
+                    <figcaption>Scenic river view</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/img4.jpg" alt="Teamwork on the raft">
+                    <figcaption>Teamwork on the raft</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/img5.jpg" alt="Sunset rafting">
+                    <figcaption>Sunset rafting</figcaption>
+                </figure>
             </section>
     </main>
 
