--- a/wwr/about.html
+++ b/wwr/about.html
@@ -22,11 +22,9 @@
             </ul>
         </nav>
     </header>
-
-
     <main> 
         <div class="hero">
-            <h1>SamSan Rafting</h1>
+            <h1>SamSan</h1>
 
             <img src="images/top.jpg" alt="image of rafting">
             <article>
