--- a/quiz.html
+++ b/quiz.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/quiz.css">
+    <meta name="author" content="Samuel Reyes ">
+    <meta name="description" content="This is a form about question of HTML and CSS">
 </head>
 <body>
     <header>
