--- a/quiz.html
+++ b/quiz.html
@@ -22,7 +22,7 @@
                     
                     <li>
                         <label for="q2">How are id and class attributes selected in CSS?</label>
-                        <input type="textarea" name="q2" id="q2"> </li>
+                        <textarea name="q2" id="q2"></textarea></li>
                     
                     <li><label for="q3">Which of the following is a valid CSS comment?</label>
                         <select name="q3" id="q3">
