--- a/quiz.html
+++ b/quiz.html
@@ -30,9 +30,9 @@
                         <option value="">Choose two...</option>
                         <option value="">Choose three...</option>
                         </select></li>
-                    
-                    <li><label for="q4">What is the bottom margin given this declaration?</label>
-                        <input type="text" name="q4" id="q4"></li>
+                    <li>
+                            <label for="q4">What is the bottom margin given this declaration?</label>
+                            <input type="number" id="q4" name="q4" step="1"></li>
                 </ol>
 
                 <button type="submit">Submit Quiz</button>
