--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Samsan Rafting - About Us</title>
+    <title>Contact | SamSan Rafting Company </title>
     <meta name="description" content="Este sitio web te proporcionará información de contacto, historial y otras promociones">
     <meta name="author" content="Samuel Reyes">
     <link rel="stylesheet" href="styles/contact.css">
