--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -6,7 +6,7 @@
     <title>Contact | SamSan Rafting Company </title>
     <meta name="description" content="Este sitio web te proporcionará información de contacto, historial y otras promociones">
     <meta name="author" content="Samuel Reyes">
-    <link rel="stylesheet" href="styles/contact.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header class="header">
