--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -14,10 +14,10 @@
             <img src="images/logo.png" alt="Logo">
             <nav>
                 <ul class="navigation">
-                    <a href="index.html">Inicio</a>
-                    <a href="about.html">Sobre Nosotros</a>
-                    <a href="trips.html">Viajes</a>
-                    <a href="contact.html">Contacto</a>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="about.html">Sobre Nosotros</a></li>
+                    <li><a href="trips.html">Viajes</a></li>
+                    <li><a href="contact.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
