--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -30,7 +30,7 @@
                 <h4>White Water Rafting</h4>
                 <p>Teléfono: 999-999-9999</p>
                 <p>Correo: info@samsanrafting.com</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1637.4888753299008!2d-79.84400150728763!3d-6.794676926414259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2spe!4v1716497711046!5m2!1ses!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1637.4888753299008!2d-79.84400150728763!3d-6.794676926414259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2spe!4v1716497711046!5m2!1ses!2spe" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <div class="image-container">
                     <img src="../images/foto1.jpg" alt="foto de Juan Mendez" class="small-image">
                     <img src="../images/foto2.jpg" alt="foto de Pedro Marquez" class="small-image">
