--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,10 +15,10 @@
         src="images/logo.png" alt="Logo">
         <nav>
             <ul class="navigation">
-                <li><a href="index.html">Home Page</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="trips.html">Trips</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="about.html">Sobre Nosotros</a></li>
+                <li><a href="trips.html">Viajes</a></li>
+                <li><a href="contact.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
